<resources>
    <string name="app_name">BuildingManager</string>
    <string name="app_name_readable">Building Manager</string>
    <string name="login_button">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_link">New user? Register</string>
    <string name="name_hint">Name</string>
    <string name="lastname_hint">Lastname</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone number</string>
    <string name="register_button">Register</string>
    <string name="register_title">Register</string>
    <string name="sign_in_error">Please enter valid information</string>
    <string name="email_wrong">Enter valid email</string>
    <string name="password_no_match">Passwords don\'t match</string>
    <string name="login_failed">Login failed</string>
    <string name="login_success">Login successful</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Strings related to login -->
</resources>
